--- a/colabcat.ipynb
+++ b/colabcat.ipynb
@@ -1,25 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "colabcat.ipynb",
-      "provenance": [],
-      "gpuType": "T4",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/cowanweks/colabcat/blob/master/colabcat.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -27,22 +12,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
-        "id": "qx7jld_zTB1E",
-        "outputId": "608b53ac-9298-43d4-c681-18dcef0cc806",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qx7jld_zTB1E",
+        "outputId": "608b53ac-9298-43d4-c681-18dcef0cc806"
       },
-      "source": [
-        "# Check GPU Specs\n",
-        "!nvidia-smi"
-      ],
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Thu Jun 19 13:32:58 2025       \n",
             "+-----------------------------------------------------------------------------------------+\n",
@@ -66,17 +47,32 @@
             "+-----------------------------------------------------------------------------------------+\n"
           ]
         }
+      ],
+      "source": [
+        "# Check GPU Specs\n",
+        "!nvidia-smi"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
-        "id": "6FHgYTj3Xb4d",
-        "outputId": "7f9f1d05-04a2-4cbf-f87d-ec98d5d9d727",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6FHgYTj3Xb4d",
+        "outputId": "7f9f1d05-04a2-4cbf-f87d-ec98d5d9d727"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "hashes\n"
+          ]
+        }
+      ],
       "source": [
         "# Get hashes to crack\n",
         "# Make a directory called 'dothashcat' in your Google Drive before this\n",
@@ -91,38 +87,23 @@
         "# and the local .hashcat directory\n",
         "!ls /content/drive/My\\ Drive/dothashcat\n",
         "!ln -s /content/drive/My\\ Drive/dothashcat /root/.hashcat"
-      ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
-            "hashes\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "Q5zVWgXVTc9X",
         "cellView": "both",
-        "outputId": "08251f7e-1ee5-4652-e47b-35cdb0ae93b2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Q5zVWgXVTc9X",
+        "outputId": "08251f7e-1ee5-4652-e47b-35cdb0ae93b2"
       },
-      "source": [
-        "# Clone, build and install Hashcat\n",
-        "!apt install hashcat"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Reading package lists... Done\n",
             "Building dependency tree... Done\n",
@@ -850,69 +831,67 @@
             "gcc    -std=gnu99 -W -Wall -Wextra -O2 -pipe -Iinclude/ -IOpenCL/ -Ideps/LZMA-SDK/C -Ideps/zlib -Ideps/zlib/contrib -Ideps/OpenCL-Headers -DWITH_BRAIN -Ideps/xxHash -DWITH_CUBIN -Ideps/unrar -DWITH_HWMON src/modules/module_31800.c obj/combined.NATIVE.a -o modules/module_31800.so -s -lstdc++ -lpthread -ldl -lrt -lm -shared -fPIC -D MODULE_INTERFACE_VERSION_CURRENT=700\n"
           ]
         }
+      ],
+      "source": [
+        "# Clone, build and install Hashcat\n",
+        "!apt install hashcat"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "BKcdtozLUe1W"
       },
+      "outputs": [],
       "source": [
         "# Check the Hashcat Version to make sure it's installed correctly\n",
         "!hashcat --version"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "UFwpl__HVvJ3"
       },
+      "outputs": [],
       "source": [
         "# WPA2 EAPOL Benchmark (change this to check the speed of whichever hash you're cracking)\n",
         "!hashcat -w 4 -m 2500 --benchmark"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "5fmoX1ku_PsU"
       },
+      "outputs": [],
       "source": [
-        "# Get wordlists\n",
-        "!mkdir /root/wordlists && cd /root/wordlists\n",
-        "\n",
-        "# Clone the SecLists repository\n",
-        "!git clone https://github.com/danielmiessler/SecLists /root/wordlists/SecLists\n",
-        "\n",
-        "# Append 'hashcat' for demonstration purposes\n",
-        "!echo \"hashcat!\" >> /root/wordlists/SecLists/Passwords/Leaked-Databases/rockyou-75.txt\n",
-        "\n",
-        "!ls /root/wordlists/SecLists"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "# Show wordlists\n",
+        "!ls /root/.hashcat/wordlists"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "yIkXZRlEFUIz"
       },
+      "outputs": [],
       "source": [
         "# Check that your hashes are accessible to Colab\n",
         "!ls /root/.hashcat/hashes"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "iLqp5xQCXwiq"
       },
+      "outputs": [],
       "source": [
         "# Start pure brute force cracking with a session name\n",
         "# !hashcat -m 2500 -a3 --session $SESSION /root/.hashcat/hashes/test.hccapx\n",
@@ -922,16 +901,16 @@
         "# !hashcat --session $SESSION --restore\n",
         "\n",
         "# Crack with a wordlist\n",
-        "!hashcat -m 2500 /root/.hashcat/hashes/test.hccapx /root/wordlists/SecLists/Passwords/Leaked-Databases/rockyou-75.txt"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "!hashcat -a 0 -m 11300 -w 3 -S /root/.hashcat/hashes/hashes.txt /root/.hashcat/wordlists/wordlist.txt"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "HrMTWTx2LUqP"
       },
+      "outputs": [],
       "source": [
         "# creating new directory to store cap files\n",
         "!mkdir cap_files\n",
@@ -944,15 +923,15 @@
         "  print('User uploaded file \"{name}\" with length {length} bytes'.format(name=f_name, length=len(uploaded[f_name])))\n",
         "\n",
         "!mv {f_name} \"/content/cap_files/{f_name}\""
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "uUrjIEd0ALR-"
       },
+      "outputs": [],
       "source": [
         "import glob\n",
         "import subprocess\n",
@@ -978,15 +957,15 @@
         "  wordlists.append(wordlist)\n",
         "for wordlist in glob.glob('/root/wordlists/SecLists/Passwords/*.txt'):\n",
         "  wordlists.append(wordlist)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "_4oUnuulDZw-"
       },
+      "outputs": [],
       "source": [
         "def check_if_cracked(command):\n",
         "  output = subprocess.check_output([command + \" --show\"], shell=True).decode()\n",
@@ -995,15 +974,15 @@
         "  else:\n",
         "    return True\n",
         "\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "2LWlGdbKCT2c"
       },
+      "outputs": [],
       "source": [
         "cap_file = f\"/content/cap_files/{f_name} \"\n",
         "for wordlist in tqdm(wordlists):\n",
@@ -1025,9 +1004,22 @@
         "  print(\"Password was not found in SecLists\")\n",
         "else:\n",
         "  pass"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "include_colab_link": true,
+      "name": "colabcat.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
