--- a/colabcat.ipynb
+++ b/colabcat.ipynb
@@ -12,6 +12,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!sudo apt update && sudo apt upgrade -y\n",
+        "!sudo apt install nvidia-driver-550  # or a newer version"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 3,
       "metadata": {
         "colab": {
