--- a/colabcat.ipynb
+++ b/colabcat.ipynb
@@ -12,6 +12,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "! wget https://github.com/hashcat/hashcat/releases/download/v6.1.0/hashcat-6.1.0.7z\n",
+        "! 7z x hashcat-6.1.0.7z\n",
+        "! cd hashcat-6.1.0\n",
+        "! ./hashcat.bin -b  # Run benchmark"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 3,
       "metadata": {
         "colab": {
