--- a/colabcat.ipynb
+++ b/colabcat.ipynb
@@ -18,8 +18,7 @@
       "source": [
         "! wget https://github.com/hashcat/hashcat/releases/download/v6.1.0/hashcat-6.1.0.7z\n",
         "! 7z x hashcat-6.1.0.7z\n",
-        "! cd hashcat-6.1.0\n",
-        "! ./hashcat.bin -b  # Run benchmark"
+        "! hashcat-6.1.0/hashcat.bin -b  # Run benchmark"
       ]
     },
     {
