--- a/colabcat.ipynb
+++ b/colabcat.ipynb
@@ -24,6 +24,16 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Install intel opencl\n",
+        "!sudo apt install intel-opencl-icd ocl-icd-opencl-dev"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "BKcdtozLUe1W"
       },
