--- a/colabcat.ipynb
+++ b/colabcat.ipynb
@@ -17,8 +17,7 @@
       "outputs": [],
       "source": [
         "! wget https://github.com/hashcat/hashcat/releases/download/v6.1.0/hashcat-6.1.0.7z\n",
-        "! 7z x hashcat-6.1.0.7z\n",
-        "! hashcat-6.1.0/hashcat.bin -b  # Run benchmark"
+        "! 7z x hashcat-6.1.0.7z"
       ]
     },
     {
